Added tags so google doesn't try translate it

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
      <head> 
+		 <meta charset="UTF-8" />
+		 <meta name="google" value="notranslate" />
+		 <meta http-equiv="Content-Language" content="en" />
+	 
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		  
+		  
           <title>Visualisation</title>
           <link type="text/css" rel="stylesheet" href="css/style.css"/>
           <link type="text/css" rel="stylesheet" href="css/smoothness/jquery-ui-1.8.14.custom.css" />
